A fix for vertical scrollbar appearing even on short pages.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,7 @@ body {
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 80px;
+    height: 81px;
     line-height: 80px;
     color: #AAA;
     border-top: 1px solid #eee;
